--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.12.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.8",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
